fix profuct slider size

--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -114,7 +114,7 @@
 								<div class="bz-slider__slides js-bz-slider--card">
 									{% for i in range(0, 4) %}
 									<div itemscope itemtype="https://schema.org/ImageObject">
-										<img class="js-zoom" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
+										<img class="js-zoom-click" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
 										<meta itemprop="name" content="здесь полное описание вплоть до артикула">
 									</div>
 									{% endfor %}
