--- a/src/templates/partials/product/_product.html
+++ b/src/templates/partials/product/_product.html
@@ -9,7 +9,7 @@
 
 	<!-- begin product-item__img -->
 	<div class="product-item__img">
-			<img class="product-item__image" src="img/products/atlas/1.png" alt="Атлас дюпон" itemprop="image">
+			<img class="product-item__image" src="img/products/atlas/1.jpg" alt="Атлас дюпон" itemprop="image">
 			<button class="button-icon button-icon--fav js-button-icon--fav product-item__fav"></button>
 	</div><!-- end product-item__img -->
 
@@ -18,7 +18,7 @@
 		<ul class="product-slider__list">
 
 			<li class="product-slider__item">
-			   <div class="product-slider__image" style="background-image: url('img/products/atlas/1.png');"></div>
+			   <div class="product-slider__image" style="background-image: url('img/products/atlas/1.jpg');"></div>
 			</li>
 
 			<li class="product-slider__item">
