--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -9,6 +9,13 @@ body{
 	}
 }
 
+.js-zoom-click {
+	cursor: zoom-in;
+	&.zoom-out {
+		cursor: zoom-out;
+	}
+}
+
 .icon{fill: $gray--darken;}
 
 //Helper Classes
