fix popup & product colors

--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -1,6 +1,7 @@
 .modal-open .modal {
 	@include bz-scroll;
 }
+
 .modal {
 	&-dialog {
 		@include respond-to(xs) {
@@ -85,6 +86,10 @@
 		}
 	}
 } //.modal
+
+#auth-form {
+	z-index: 1002;
+}
 
 .change-city {
 	&__title {
