fix registration popup add two title

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -1,6 +1,6 @@
-@import "../libs/fontawesome5.css";
-@import "../libs/select2/select2.css";
-@import "../libs/nouislider/nouislider.css";
+@import "../libs/fontawesome5";
+@import "../libs/select2/select2";
+@import "../libs/nouislider/nouislider";
 @import "../libs/slick/slick-theme";
 @import "../libs/slick/slick";
 @import "../libs/modal/modal";
