remove zoom in card & fix forward script menu & add counter with favorite

--- a/src/sass/helpers/_templates.scss
+++ b/src/sass/helpers/_templates.scss
@@ -42,7 +42,7 @@
 	min-width: 20px;
 	height: 20px;
 	color: $color-text;
-	font-family: $f-light;
+	font-family: $f-medium;
 	font-size: 11px;
 	vertical-align: middle;
 	border-radius: 500px;
