--- a/src/templates/partials/header/_header.html
+++ b/src/templates/partials/header/_header.html
@@ -97,13 +97,13 @@
 								<span class="user-nav__text">Поиск</span>
 							</a>
 						</li>
-						<li class="user-nav__item">
+						<li class="user-nav__item user-nav__item--fav" data-count="11">
 							<a href="#" class="user-nav__link">
 								<i class="fal fa-heart user-nav__icon"></i>
 								<span class="user-nav__text">Избранное</span>
 							</a>
 						</li>
-						<li class="user-nav__item user-nav__item--cart" data-cart-counter="8">
+						<li class="user-nav__item user-nav__item--cart" data-count="8">
 							<a href="cart.html" class="user-nav__link">
 								<i class="fal fa-shopping-cart user-nav__icon"></i>
 								<span class="user-nav__text">Корзина</span>
