--- a/src/templates/partials/header/_menu.html
+++ b/src/templates/partials/header/_menu.html
@@ -62,7 +62,7 @@
 			<ul class="nav-dropdown nav-main__dropdown">
 				<div class="nav-dropdown__items">
 					<div class="nav-dropdown__columns">
-						<li class="nav-dropdown__item">
+						<li class="nav-dropdown__item nav-dropdown__item--back">
 							<a href="javascript:void(0);" class="nav-dropdown__title nav-dropdown__title--link js-main-nav-link--forward">Назад</a>
 						</li>
 						{% for i in range(0, 9) %}
