add card gallary image

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -4,6 +4,8 @@
 @import "../libs/slick/slick-theme";
 @import "../libs/slick/slick";
 @import "../libs/modal/modal";
+@import "../libs/modal/ekko-lightbox";
+@import "../libs/fancybox/jquery.fancybox";
 @import "../libs/smart-grid";
 
 //noUiSlider
