--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -1,3 +1,12 @@
+.compensate-for-scrollbar {
+	margin-right: 0px !important;
+}
+
+.fancybox-toolbar {
+	top: auto;
+	bottom: 0;
+}
+
 .modal-open .modal {
 	@include bz-scroll;
 }
