--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -35,8 +35,10 @@ title: Атлас дюпон «izumrud»
 					<div class="bz-slider__slides js-bz-slider--card">
 						{% for i in range(0, 4) %}
 						<div itemscope itemtype="https://schema.org/ImageObject">
-							<img class="js-zoom" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
-							<meta itemprop="name" content="здесь полное описание вплоть до артикула">
+							<a href="img/products/atlas/big/{{i+1}}.png" data-fancybox="images">
+								<img class="js-zoom" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
+								<meta itemprop="name" content="здесь полное описание вплоть до артикула">
+							</a>
 						</div>
 						{% endfor %}
 					</div>
