--- a/src/templates/partials/header/_header.html
+++ b/src/templates/partials/header/_header.html
@@ -97,9 +97,10 @@
 								<span class="user-nav__text">Поиск</span>
 							</a>
 						</li>
-						<li class="user-nav__item user-nav__item--fav" data-count="11">
+						<li class="user-nav__item user-nav__item--fav is-checked">
 							<a href="#" class="user-nav__link">
 								<i class="fal fa-heart user-nav__icon"></i>
+								<i class="fas fa-heart user-nav__icon"></i>
 								<span class="user-nav__text">Избранное</span>
 							</a>
 						</li>
