--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -347,19 +347,19 @@
 			&::before {
 				right: 8px;
 			}
-			&.is-checked {
-				.fas {
-					display: block;
-				}
-				.fal {
-					display: none;
-				}
-			}
+			// &.is-checked {
+			// 	.fas {
+			// 		display: block;
+			// 	}
+			// 	.fal {
+			// 		display: none;
+			// 	}
+			// }
 		}
-		.fas {
-			display: none;
-			color: $color-accent;
-		}
+		// .fas {
+		// 	display: none;
+		// 	color: $color-accent;
+		// }
 	} //.user-nav__item
 
 	&__link {
