--- a/src/templates/partials/header/_header.html
+++ b/src/templates/partials/header/_header.html
@@ -100,7 +100,7 @@
 						<li class="user-nav__item user-nav__item--fav is-checked">
 							<a href="#" class="user-nav__link">
 								<i class="fal fa-heart user-nav__icon"></i>
-								<i class="fas fa-heart user-nav__icon"></i>
+								<i class="fas fa-heart user-nav__icon" style="display: none;"></i>
 								<span class="user-nav__text">Избранное</span>
 							</a>
 						</li>
