fix mobile menu bugs

--- a/src/templates/partials/header/_menu.html
+++ b/src/templates/partials/header/_menu.html
@@ -65,7 +65,7 @@
 						<li class="nav-dropdown__item nav-dropdown__item--back">
 							<a href="javascript:void(0);" class="nav-dropdown__title nav-dropdown__title--link js-main-nav-link--forward">Назад</a>
 						</li>
-						{% for i in range(0, 8) %}
+						{% for i in range(0, 15) %}
 						<li class="nav-dropdown__item">
 							<a href="#" class="nav-dropdown__title js-main-nav-link--forward">Атлас</a>
 							<ul class="nav-dropdown--sub">
@@ -79,7 +79,7 @@
 								<li><a href="#">Для вышевки</a></li>
 							</ul>
 						</li>
-						{% endfor %}﻿
+						{% endfor %}
 					</div>
 				</div>
 			</ul>
