--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -262,6 +262,10 @@
 		@include respond-to(sm) {
 			@include listPosition;
 			top: 100px;
+
+			.nav-dropdown__columns {
+				padding-top: 0;
+			}
 		}
 	} //.nav-main__dropdown
 
@@ -327,12 +331,18 @@
 	background-color: $color-bg--lighten;
 	z-index: z(dropdown);
 
+	@include respond-to(sm) {
+		overflow-x: hidden;
+		@include bz-scroll;
+	}
+
 	&__items {
 		height: auto;
 		@include container;
 		@extend %flexColumn;
 
 		@include respond-to(sm) {
+			height: 100%;
 			padding: 0;
 		}
 	} //.nav-main-dropdown__items
@@ -343,12 +353,12 @@
 		@include row-flex;
 
 		@include respond-to(sm) {
-			columns: auto 4;
-		}
-		@include respond-to(sm) {
+			margin: 0;
+			padding-top: 110px;
 			background-color: #fff;
 			columns: auto;
-			@include bz-scroll;
+			overflow-y: auto;
+			overflow-x: hidden;
 		}
 	} //.nav-main-dropdown__columns
 
@@ -360,6 +370,11 @@
 		@include size(2);
 		@include size-md(3);
 		@include size-xs(12);
+
+		@include respond-to(xs) {
+			margin: 0;
+			width: 100%;
+		}
 
 		&.is-active {
 			.nav-dropdown--sub {
@@ -373,6 +388,12 @@
 		}
 
 		&--back {
+			background-color: #fff;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			z-index: 10;
 			@include min-screen(481) {
 				display: none;
 			}
@@ -460,7 +481,8 @@
 		@include respond-to(sm) {
 			position: absolute;
 			@include listPosition;
-			top: 107px;
+			top: 55px;
+			height: 100%;
 			z-index: z(absolute);
 		}
 
