--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -69,6 +69,8 @@
 			line-height: 1;
 			color: #000;
 			text-shadow: 0 1px 0 #fff;
+			border: 0;
+			box-shadow: none;
 			background-color: transparent;
 			opacity: 0.3;
 			position: absolute;
