--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -138,10 +138,14 @@
 								<span>white</span>
 							</h1>
 
-							<div class="card__price">340,00
-								<span>руб/м</span>
-								<small>-15%</small>
-							</div>
+							<!-- begin price -->
+							<div class="price__wrap">
+								<div class="card__price price">340,00 <span>руб/м</span></div>
+								<div class="card__price price price--last">588,32 <span>руб/м</span><small>-15%</small></div>
+								<div class="info-block card__info-block">
+									<div class="info-block__dropdown">Цена зависит от кол-ва товара в заказе</div>
+								</div>
+							</div><!-- end price -->
 
 							<!-- begin item-select -->
 							<div class="item-select__group card__item-select">
