--- a/src/sass/pages/_card.scss
+++ b/src/sass/pages/_card.scss
@@ -164,22 +164,35 @@ $card-indent: $gutter * 2;
 	} //.card__item-select
 
 	&__price {
-		margin-bottom: $gutter * 1.5;
 		font-family: $f2-bold;
 		font-size: 23px;
-		@include respond-to(xs) {
-			margin-bottom: $gutter/1.5;
-		}
+
 		span {
 			font-family: $f-light;
 			font-size: 15px;
 		}
+
 		small {
 			margin-left: 5px;
 			font-size: 15px;
 			color: $color-danger;
 		}
 	} //.card__price
+
+	&__info-block {
+		margin-left: 10px;
+		margin-top: 10px;
+
+		@include respond-to(xs) {
+			margin-top: 7px;
+
+			.info-block__dropdown {
+				left: auto;
+				right: 0;
+				top: 140%;
+			}
+		}
+	} //.card__info-block
 
 	&__btn {
 		font-size: 16px;
@@ -415,6 +428,10 @@ $card-indent: $gutter * 2;
 			&__titles {
 				padding-bottom: 1px;
 				overflow-x: auto;
+
+				@include respond-to(xs) {
+					width: 100%;
+				}
 			}
 
 			&__title {
