--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -264,7 +264,7 @@
 			top: 100px;
 
 			.nav-dropdown__columns {
-				padding-top: 0;
+				padding-top: 110px;
 			}
 		}
 	} //.nav-main__dropdown
