--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -255,6 +255,10 @@
 	cursor: url(../../icons/png/search-minus-light--white.png), zoom-out;
 }
 
+.easyzoom-notice {
+	display: none;
+}
+
 
 //Mas Gray
 // [class*="ymaps-2"][class*="-ground-pane"] {
