--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -37,7 +37,7 @@ $gray--light: #e1e1e1;
 $gray--lighten: #e6e6e6;
 $gray--lightest: #f6f6f6;
 
-//clolors
+//colors
 $color-muted: #d6d6d6;
 $color-primary: $color-main;
 $color-success: #8cc152;
