--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -1,4 +1,21 @@
 {% set
+	paySelect = [
+	{
+		option: 'Наложенный платеж'
+	},
+	{
+		option: 'Яндекс.деньги'
+	},
+	{
+		option: 'Сбербанк Онлайн'
+	},
+	{
+		option: 'WebMoney'
+	}
+]
+%}
+
+{% set
 dayOfWeek = [
 	{
 		title: 'Пн',
