--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -5,12 +5,12 @@
 	line-height: 40px;
 	@extend %textLight;
 	font-size: 14px;
-	border: 1px solid $color-border--light;
+	border: 1px solid #d9d9d9;
 	border-radius: $border-radius;
 	position: relative;
 	&::before {
 		content: "\f107";
-		font-family: fontawesome;
+		font-family: faR;
 		@include vy;
 		right: 13px;
 	}
