--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -152,6 +152,19 @@ wrapperClass: page-cart
 							</div>
 						</div>
 
+						<div class="form__box form__box--label">
+							<span class="form__box_label">Способ оплаты (выберите сейчас, заплатите позже)</span>
+							<div class="select form__select">
+								<select class="js-select no-search">
+									{% import "data/data.html" as select %}
+
+									{% for item in select.paySelect %}
+									<option value="{{item.option}}">{{item.option}}</option>
+									{% endfor %}
+								</select>
+							</div>
+						</div>
+
 						<div class="cart__policy">
 							{% include "partials/components/_policy.html" %}
 						</div>
