changed paySelect lable

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -153,7 +153,7 @@ wrapperClass: page-cart
 						</div>
 
 						<div class="form__box form__box--label">
-							<span class="form__box_label">Способ оплаты (выберите сейчас, заплатите позже)</span>
+							<span class="form__box_label">Способ оплаты (выберите сейчас, оплатите позже)</span>
 							<div class="select form__select">
 								<select class="js-select no-search">
 									{% import "data/data.html" as select %}
